@@ -281,6 +281,8 @@ class TaskRefinerBase (object):
             self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['useFileAsSourceLFN'])
         if 'ignoreMissingInDS' in taskParamMap and taskParamMap['ignoreMissingInDS'] == True:
             self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['ignoreMissingInDS'])
+        if 'noExecStrCnv' in taskParamMap and taskParamMap['noExecStrCnv'] == True:
+            self.setSplitRule(None,1,JediTaskSpec.splitRuleToken['noExecStrCnv'])
         # work queue
         workQueue = None
         if 'workQueueName' in taskParamMap:
