@@ -1,5 +1,8 @@
 Release Notes
 
+* 4/14/2017
+  * added noExecStrCnv
+
 * 4/11/2017
   * added throttleJobsInPausedTasks
 
